# athena

./: .gitignore  .latexmkrc  README.md  compile.sh  pyproject.toml
aux/: 00_athena.bcf  00_athena.run.xml  references.bib
code/: python_figures.py
code/fig/: cluster_summary.csv
fig/: sdg_mapping_table.csv
src/: 00_abstract.tex  00_athena.tex  01_introduction.tex  02_literature_review.tex  02_theoretical_background.tex  03_methodology.tex  04_artefact_dev.tex  04_results.tex  05_demo_eval.tex  05_discussion.tex  06_conclusion.tex  Project_Athena_Thesis.tex  appendix_add_data.tex  appendix_interview_guide.tex  references.bib  test.bib
