[project]
name = "ai-bach-thesis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.3",
    "networks>=0.3.7",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "pytrends>=4.9.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]
